[package]
name = "a-get-node-info"
version = "0.1.0"
authors = ["rckey <private.richardk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.28"
iota-core = { git = "https://github.com/iotaledger/iota.rs" }
smol = {version = "=0.1.7", features = ["tokio02"] }
smol-potat = "0.3.1"
