[package]
name = "examples"
version = "0.1.0"
authors = ["rckey <private.richardk@gmail.com>", "huhn <huhn@einfachIOTA.de>", "Thoralf-M <thoralf.mue@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.28"
iota-core = { git = "https://github.com/iotaledger/iota.rs", rev = "37dca441418a9da2d8c045da381e2e3ef29c40ca" }
iota-conversion =  "0.5.1"
smol = {version = "=0.1.7", features = ["tokio02"] }
smol-potat = "0.3.1"

[[example]]
name = "00_get_node_info"
path = "00_get_node_info.rs"

[[example]]
name = "01_send_data"
path = "01_send_data.rs"

[[example]]
name = "02_fetch_data"
path = "02_fetch_data.rs"

[[example]]
name = "03_get_new_address"
path = "03_get_new_address.rs"

[[example]]
name = "04_check_balance"
path = "04_check_balance.rs"

[[example]]
name = "05_send_tokens"
path = "05_send_tokens.rs"