[package]
name = "h-streams"
version = "0.1.0"
authors = ["huhn <huhn@einfachIOTA.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iota-streams = { git = "https://github.com/iotaledger/streams" }
failure = "0.1.7"
