[package]
name = "i-streams-publish"
version = "0.1.0"
authors = ["huhn <huhn@einfachIOTA.de>", "you"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iota-streams = { git = "https://github.com/iotaledger/streams" }
iota-streams-core= { git = "https://github.com/iotaledger/streams" }
iota-streams-app = { git = "https://github.com/iotaledger/streams" }
iota-streams-app-channel = { git = "https://github.com/iotaledger/streams" }
iota-streams-protobuf3 = { git = "https://github.com/iotaledger/streams" }
failure = "0.1.7"
iota-lib-rs = "0.4.1"
